(lang dune 3.18)

(name standard_product_3)

(generate_opam_files true)

(source
 (github smuenzel/standard-product-3))

(authors "Stefan Muenzel <source@s.muenzel.net>")

(maintainers "Stefan Muenzel <source@s.muenzel.net>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name standard_product_3)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
